# b3-pipeline-data-and-backtest-framework

./: .gitignore  Makefile  README.md  b3_market_data.sqlite-shm  check_b3_payload.py  check_dividends.py  check_itau.py  check_splits.py  debug_adj.py  debug_backtest.py  debug_backtest_2020.py  debug_blowup.py  debug_itau4.py  debug_jumps.py  debug_shorts.py  debug_sqz.py  debug_ticker.py  fix_anomalies.py  fix_bankruptcy.py  fix_cf.py  fix_db_schema.py  fix_init_short.py  fix_short_math.py  fix_short_math2.py  fix_short_math3.py  fix_short_math4.py  fix_stoploss.py  fix_tax.py  force_adj_save.py  force_adj_save_fast.py  requirements.txt  run_ui.py  test_adj.py  test_b3.py  test_cdi.py  test_db.py  test_payloads.py  update_db.py
.claude/: app-context.md
b3_pipeline/: __init__.py  adjustments.py  b3_corporate_actions.py  cad_downloader.py  cad_parser.py  config.py  cvm_downloader.py  cvm_main.py  cvm_parser.py  cvm_storage.py  dm_downloader.py  dm_main.py  dm_parser.py  downloader.py  fca_parser.py  ipe_downloader.py  ipe_parser.py  main.py  parser.py  storage.py
b3_pipeline_rs/: Cargo.toml  pyproject.toml
b3_pipeline_rs/src/: adjustments.rs  correlation.rs  cross_section.rs  feature_eval.rs  lib.rs  parser.rs  pivot.rs  schema.rs  util.rs
backtests/: README.md  adaptive_low_vol_backtest.py  anti_lottery_backtest.py  balanced_smallcap_cdi_backtest.py  beta_volatility_regime_backtest.py  bull_trap_short_backtest.py  cdi_ma200_trend_backtest.py  combined_strategy_backtest.py  compare_all.py  copom_easing_backtest.py  copom_momentum_backtest.py  correlation_matrix.py  (+46 more)
(+986 files in other folders)
